# contains-benchmark

./: .gitignore  Cargo.toml  Makefile  README.md  benchmark.mjs  bun.lockb  package-lock.json  package.json  requirements.txt
data/: 10000_random_points.geojson  1000_random_points.geojson  ne_110m_land.geojson  polygon.geojson
src/: contains.c  contains.mjs  contains.py  contains.rs  contains.turf.mjs
