[package]
name = "contains-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "contains"
path = "src/contains.rs"

[dependencies]
arrow = "53.2.0"
geo = "0.29.2"
geo-types = "0.7.14"
geojson = "0.24.1"
rand = "0.8.5"
